--- a/public/css/app.css
+++ b/public/css/app.css
@@ -126,7 +126,7 @@ h6 {
     z-index: 997;
     height: 60px;
     box-shadow: 0px 2px 20px rgba(1, 41, 112, 0.1);
-    background-color: #024b7e;
+    background-color: #8e71d9;
     padding-left: 20px;
 }
 
@@ -220,8 +220,8 @@ h6 {
 
 .btn-lang:hover {
     color: #fff !important;
-    background-color: #ffc107;
-    border-color: #ffc107;
+    background-color: #8e71d9;
+    border-color: #8e71d9;
 }
 
 /*--------------------------------------------------------------
@@ -240,7 +240,7 @@ h6 {
     scrollbar-width: thin;
     scrollbar-color: #aab7cf transparent;
     box-shadow: 0px 0px 20px rgba(1, 41, 112, 0.1);
-    background-image: linear-gradient(to right, #0071c1, #0363a7);
+    background-image: linear-gradient(to right, #8e71d9, #5e3eb1);
 }
 
 @media (max-width: 1199px) {
@@ -316,7 +316,7 @@ h6 {
         font-weight: 600;
         color: #ffffff;
         transition: 0.3;
-        background-image: linear-gradient(to right, #0071c1, #0071c1);
+        background-image: linear-gradient(to right, #8e71d9, #8e71d9);
         padding: 10px 15px;
         border-radius: 4px;
     }
@@ -329,7 +329,7 @@ h6 {
 
         .sidebar-nav .nav-link.collapsed {
             color: #ffffff;
-            background-image: linear-gradient(to right, #0071c1, #0071c1);
+            background-image: linear-gradient(to right, #8e71d9, #8e71d9);
         }
 
 .sidebar-nav .nav-link.collapsed i {
