--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -9,11 +9,11 @@
 :root {
    --bs-blue: #0d6efd;
    --bs-indigo: #6610f2;
-   --bs-purple: #6f42c1;
+   --bs-purple: #8e71d9;
    --bs-pink: #d63384;
    --bs-red: #dc3545;
    --bs-orange: #fd7e14;
-   --bs-yellow: #ffc107;
+   --bs-yellow: #8e71d9;
    --bs-green: #198754;
    --bs-teal: #20c997;
    --bs-cyan: #0dcaf0;
@@ -33,7 +33,7 @@
    --bs-secondary: #6c757d;
    --bs-success: #198754;
    --bs-info: #0dcaf0;
-   --bs-warning: #ffc107;
+   --bs-warning: #8e71d9;
    --bs-danger: #dc3545;
    --bs-light: #f8f9fa;
    --bs-dark: #212529;
@@ -3441,21 +3441,21 @@ fieldset:disabled .btn {
 
 .btn-warning {
    color: #000;
-   background-color: #0071c1;
-   border-color: #0071c1;
+   background-color: #8e71d9;
+   border-color: #8e71d9;
 }
 
 .btn-warning:hover {
    color: #000;
-   background-color: #0071c1;
-   border-color: #0071c1;
+   background-color: #8e71d9;
+   border-color: #8e71d9;
 }
 
 .btn-check:focus+.btn-warning,
 .btn-warning:focus {
    color: #000;
-   background-color: #0071c1;
-   border-color: #0071c1;
+   background-color: #8e71d9;
+   border-color: #8e71d9;
    box-shadow: 0 0 0 0.25rem rgba(217, 164, 6, 0.5);
 }
 
@@ -3465,8 +3465,8 @@ fieldset:disabled .btn {
 .btn-warning.active,
 .show>.btn-warning.dropdown-toggle {
    color: #000;
-   background-color: #0071c1;
-   border-color: #0071c1;
+   background-color: #8e71d9;
+   border-color: #8e71d9;
 }
 
 .btn-check:checked+.btn-warning:focus,
@@ -3480,8 +3480,8 @@ fieldset:disabled .btn {
 .btn-warning:disabled,
 .btn-warning.disabled {
    color: #000;
-   background-color: #0071c1;
-   border-color: #0071c1;
+   background-color: #8e71d9;
+   border-color: #8e71d9;
 }
 
 .btn-danger {
@@ -3780,14 +3780,14 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-warning {
-   color: #0071c1;
-   border-color: #0071c1;
+   color: #8e71d9;
+   border-color: #8e71d9;
 }
 
 .btn-outline-warning:hover {
    color: #000;
-   background-color: #0071c1;
-   border-color: #0071c1;
+   background-color: #8e71d9;
+   border-color: #8e71d9;
 }
 
 .btn-check:focus+.btn-outline-warning,
@@ -3801,8 +3801,8 @@ fieldset:disabled .btn {
 .btn-outline-warning.active,
 .btn-outline-warning.dropdown-toggle.show {
    color: #000;
-   background-color: #0071c1;
-   border-color: #0071c1;
+   background-color: #8e71d9;
+   border-color: #8e71d9;
 }
 
 .btn-check:checked+.btn-outline-warning:focus,
@@ -3815,7 +3815,7 @@ fieldset:disabled .btn {
 
 .btn-outline-warning:disabled,
 .btn-outline-warning.disabled {
-   color: #0071c1;
+   color: #8e71d9;
    background-color: transparent;
 }
 
@@ -7394,12 +7394,12 @@ fieldset:disabled .btn {
 }
 
 .link-warning {
-   color: #0071c1;
+   color: #8e71d9;
 }
 
 .link-warning:hover,
 .link-warning:focus {
-   color: #0071c1;
+   color: #8e71d9;
 }
 
 .link-danger {
@@ -7850,7 +7850,7 @@ fieldset:disabled .btn {
 }
 
 .border-warning {
-   border-color: #ffc107 !important;
+   border-color: #8e71d9 !important;
 }
 
 .border-danger {
