--- a/resources/css/bootstrap.css
+++ b/resources/css/bootstrap.css
@@ -9,11 +9,11 @@
 :root {
     --bs-blue: #0d6efd;
     --bs-indigo: #6610f2;
-    --bs-purple: #6f42c1;
+    --bs-purple: #8e71d9;
     --bs-pink: #d63384;
     --bs-red: #dc3545;
     --bs-orange: #fd7e14;
-    --bs-yellow: #ffc107;
+    --bs-yellow: #8e71d9;
     --bs-green: #198754;
     --bs-teal: #20c997;
     --bs-cyan: #0dcaf0;
@@ -33,7 +33,7 @@
     --bs-secondary: #6c757d;
     --bs-success: #198754;
     --bs-info: #0dcaf0;
-    --bs-warning: #ffc107;
+    --bs-warning: #8e71d9;
     --bs-danger: #dc3545;
     --bs-light: #f8f9fa;
     --bs-dark: #212529;
@@ -3442,21 +3442,21 @@ fieldset:disabled .btn {
 
 .btn-warning {
     color: #000;
-    background-color: #ffc107;
-    border-color: #ffc107;
+    background-color: #8e71d9;
+    border-color: #8e71d9;
 }
 
 .btn-warning:hover {
     color: #000;
-    background-color: #ffca2c;
-    border-color: #ffc720;
+    background-color: #5e42a6;
+    border-color: #5e42a6;
 }
 
 .btn-check:focus+.btn-warning,
 .btn-warning:focus {
     color: #000;
-    background-color: #ffca2c;
-    border-color: #ffc720;
+    background-color: #5e42a6;
+    border-color: #5e42a6;
     box-shadow: 0 0 0 0.25rem rgba(217, 164, 6, 0.5);
 }
 
@@ -3466,8 +3466,8 @@ fieldset:disabled .btn {
 .btn-warning.active,
 .show>.btn-warning.dropdown-toggle {
     color: #000;
-    background-color: #ffcd39;
-    border-color: #ffc720;
+    background-color: #5e42a6;
+    border-color: #5e42a6;
 }
 
 .btn-check:checked+.btn-warning:focus,
@@ -3481,8 +3481,8 @@ fieldset:disabled .btn {
 .btn-warning:disabled,
 .btn-warning.disabled {
     color: #000;
-    background-color: #ffc107;
-    border-color: #ffc107;
+    background-color: #8e71d9;
+    border-color: #8e71d9;
 }
 
 .btn-danger {
@@ -3781,14 +3781,14 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-warning {
-    color: #ffc107;
-    border-color: #ffc107;
+    color: #8e71d9;
+    border-color: #8e71d9;
 }
 
 .btn-outline-warning:hover {
     color: #000;
-    background-color: #ffc107;
-    border-color: #ffc107;
+    background-color: #8e71d9;
+    border-color: #8e71d9;
 }
 
 .btn-check:focus+.btn-outline-warning,
@@ -3802,8 +3802,8 @@ fieldset:disabled .btn {
 .btn-outline-warning.active,
 .btn-outline-warning.dropdown-toggle.show {
     color: #000;
-    background-color: #ffc107;
-    border-color: #ffc107;
+    background-color: #8e71d9;
+    border-color: #8e71d9;
 }
 
 .btn-check:checked+.btn-outline-warning:focus,
@@ -3816,7 +3816,7 @@ fieldset:disabled .btn {
 
 .btn-outline-warning:disabled,
 .btn-outline-warning.disabled {
-    color: #ffc107;
+    color: #8e71d9;
     background-color: transparent;
 }
 
@@ -7385,12 +7385,12 @@ fieldset:disabled .btn {
 }
 
 .link-warning {
-    color: #ffc107;
+    color: #8e71d9;
 }
 
 .link-warning:hover,
 .link-warning:focus {
-    color: #ffcd39;
+    color: #5e42a6;
 }
 
 .link-danger {
@@ -7841,7 +7841,7 @@ fieldset:disabled .btn {
 }
 
 .border-warning {
-    border-color: #ffc107 !important;
+    border-color: #8e71d9 !important;
 }
 
 .border-danger {
