--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3240,27 +3240,27 @@ input, select, textarea {
 		}
 
 		.wrapper.style1 {
-			background-color: #8e71d9;
+			background-color: #27262b;
 		}
 
 		.wrapper.style1-alt {
-			background-color: #493382;
+			background-color: #1a191b;
 		}
 
 		.wrapper.style2 {
-			background-color: #5052b5;
+			background-color: #3f3f3f;
 		}
 
 		.wrapper.style2-alt {
-			background-color: #3e4094;
+			background-color: #363636;
 		}
 
 		.wrapper.style3 {
-			background-color: #b74e91;
+			background-color: #797979;
 		}
 
 		.wrapper.style3-alt {
-			background-color: #953d75;
+			background-color: #757575;
 		}
 
 		.wrapper.fullscreen {
@@ -3524,7 +3524,7 @@ input, select, textarea {
 
 	#sidebar {
 		padding: 2.5em 2.5em 0.5em 2.5em ;
-		background: #312450;
+		background: #000;
 		cursor: default;
 		height: 100vh;
 		left: 0;
