--- a/public/css/app.css
+++ b/public/css/app.css
@@ -87,13 +87,12 @@ h6 {
 }
 
 .dropdown-menu .dropdown-item:hover {
-    background-color: #212529;;
-    color: #FFE;
+    background-color: #212529;
+    color: #ffe;
 }
 
 .dropdown-menu .dropdown-item i:hover {
-   color: #ffa019;
-
+    color: #ffa019;
 }
 
 /*--------------------------------------------------------------
@@ -126,7 +125,7 @@ h6 {
     z-index: 997;
     height: 60px;
     box-shadow: 0px 2px 20px rgba(1, 41, 112, 0.1);
-    background-color: #8e71d9;
+    background-color: #020801;
     padding-left: 20px;
 }
 
@@ -144,7 +143,7 @@ h6 {
     list-style: none;
 }
 
-.header-nav>ul {
+.header-nav > ul {
     margin: 0;
     padding: 0;
 }
@@ -211,7 +210,6 @@ h6 {
     color: #d8d8d8;
 }
 
-
 .btn-lang {
     background-image: linear-gradient(to right, rgb(0, 0, 0), rgb(28, 28, 28));
     color: #fff !important;
@@ -220,8 +218,8 @@ h6 {
 
 .btn-lang:hover {
     color: #fff !important;
-    background-color: #8e71d9;
-    border-color: #8e71d9;
+    background-color: #020801;
+    border-color: #020801;
 }
 
 /*--------------------------------------------------------------
@@ -240,7 +238,7 @@ h6 {
     scrollbar-width: thin;
     scrollbar-color: #aab7cf transparent;
     box-shadow: 0px 0px 20px rgba(1, 41, 112, 0.1);
-    background-image: linear-gradient(to right, #8e71d9, #5e3eb1);
+    background-image: linear-gradient(to right, #151515, #151515);
 }
 
 @media (max-width: 1199px) {
@@ -260,7 +258,6 @@ h6 {
 }
 
 @media (min-width: 1200px) {
-
     #main,
     #footer {
         margin-left: 300px;
@@ -274,7 +271,6 @@ h6 {
 }
 
 @media (min-width: 1200px) {
-
     .toggle-sidebar #main,
     .toggle-sidebar #footer {
         margin-left: 0;
@@ -309,17 +305,17 @@ h6 {
     margin: 10px 0 5px 15px;
 }
 
-    .sidebar-nav .nav-link {
-        display: flex;
-        align-items: center;
-        font-size: 15px;
-        font-weight: 600;
-        color: #ffffff;
-        transition: 0.3;
-        background-image: linear-gradient(to right, #8e71d9, #8e71d9);
-        padding: 10px 15px;
-        border-radius: 4px;
-    }
+.sidebar-nav .nav-link {
+    display: flex;
+    align-items: center;
+    font-size: 15px;
+    font-weight: 600;
+    color: #ffffff;
+    transition: 0.3;
+    background-image: linear-gradient(to right, #020801, #020801);
+    padding: 10px 15px;
+    border-radius: 4px;
+}
 
 .sidebar-nav .nav-link i {
     font-size: 16px;
@@ -327,10 +323,10 @@ h6 {
     color: #ffffff;
 }
 
-        .sidebar-nav .nav-link.collapsed {
-            color: #ffffff;
-            background-image: linear-gradient(to right, #8e71d9, #8e71d9);
-        }
+.sidebar-nav .nav-link.collapsed {
+    color: #ffffff;
+    background-image: linear-gradient(to right, #020801, #020801);
+}
 
 .sidebar-nav .nav-link.collapsed i {
     color: #ffffff;
@@ -338,7 +334,7 @@ h6 {
 
 .sidebar-nav .nav-link:hover {
     color: #ffffff;
-    background: #025fa1;
+    background: #99c147;
 }
 
 .sidebar-nav .nav-link:hover i {
@@ -365,7 +361,7 @@ h6 {
     align-items: center;
     font-size: 14px;
     font-weight: 600;
-   color: rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
     transition: 0.3;
     padding: 10px 0 10px 40px;
     transition: 0.3s;
@@ -825,11 +821,9 @@ h6 {
 }
 
 .iconhead:hover {
-  color: #ffa019;
-
+    color: #ffa019;
 }
 
-.joinhead:hover{
-
-color: #ffa019;
+.joinhead:hover {
+    color: #ffa019;
 }
