--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,8 +4,21 @@
 
 body {
     font-family: Poppins, sans-serif;
-    background: #eeeeee !important;
+    background: #fff !important;
     color: #707070;
+}
+
+.bg-shape {
+    width: 200px;
+    height: 200px;
+    top: 0;
+    left: 43%;
+    background: #b1ff0e;
+    z-index: 1;
+    fill: #b1ff0e;
+    opacity: 1;
+    filter: blur(250px);
+    position: absolute;
 }
 
 a {
@@ -125,7 +138,7 @@ h6 {
     z-index: 997;
     height: 60px;
     box-shadow: 0px 2px 20px rgba(1, 41, 112, 0.1);
-    background-color: #020801;
+    background-color: #000;
     padding-left: 20px;
 }
 
@@ -218,8 +231,8 @@ h6 {
 
 .btn-lang:hover {
     color: #fff !important;
-    background-color: #020801;
-    border-color: #020801;
+    background-color: #fff;
+    border-color: #fff;
 }
 
 /*--------------------------------------------------------------
@@ -312,7 +325,7 @@ h6 {
     font-weight: 600;
     color: #ffffff;
     transition: 0.3;
-    background-image: linear-gradient(to right, #020801, #020801);
+    background-image: linear-gradient(to right, #99c147, #99c147);
     padding: 10px 15px;
     border-radius: 4px;
 }
@@ -325,7 +338,7 @@ h6 {
 
 .sidebar-nav .nav-link.collapsed {
     color: #ffffff;
-    background-image: linear-gradient(to right, #020801, #020801);
+    background-image: linear-gradient(to right, #99c147, #99c147);
 }
 
 .sidebar-nav .nav-link.collapsed i {
