--- a/public/css/app.css
+++ b/public/css/app.css
@@ -251,7 +251,7 @@ h6 {
     scrollbar-width: thin;
     scrollbar-color: #aab7cf transparent;
     box-shadow: 0px 0px 20px rgba(1, 41, 112, 0.1);
-    background-image: linear-gradient(to right, #151515, #151515);
+    background: linear-gradient(to right, #151515, #151515);
 }
 
 @media (max-width: 1199px) {
@@ -325,7 +325,7 @@ h6 {
     font-weight: 600;
     color: #ffffff;
     transition: 0.3;
-    background-image: linear-gradient(to right, #99c147, #99c147);
+    background: linear-gradient(to right, #99c147, #99c147);
     padding: 10px 15px;
     border-radius: 4px;
 }
@@ -338,7 +338,7 @@ h6 {
 
 .sidebar-nav .nav-link.collapsed {
     color: #ffffff;
-    background-image: linear-gradient(to right, #99c147, #99c147);
+    background: linear-gradient(to right, #99c147, #99c147);
 }
 
 .sidebar-nav .nav-link.collapsed i {
