--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -232,7 +232,7 @@ h6 {
     scrollbar-width: thin;
     scrollbar-color: #aab7cf transparent;
     box-shadow: 0px 0px 20px rgba(1, 41, 112, 0.1);
-    background-color: rgb(26, 26, 26);
+    background: linear-gradient(to right, #151515, #151515);
 }
 
 @media (max-width: 1199px) {
